--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,7 @@
+@value primary: #998FCC;
+@value secondary: #82acf2;
+
+
 .container {
   padding: 0 2rem;
 }
@@ -10,6 +14,23 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: primary;
+}
+
+.tempButton {
+  background: secondary;
+  border: none;
+  height: 35px;
+  width: 75px;
+  border-radius: 7px;
+  outline: none;
+
+}
+
+.homePhoto {
+  height: 250px;
+  /* width: 250px; */
+  margin-top: 50px;
 }
 
 .footer {
